<resources>
    <string name="app_name">Online Market</string>
    <string name="bottom_home">خانه</string>
    <string name="bottom_favorits">علاقه مندی ها</string>
    <string name="categories">دسته بندی ها</string>
    <string name="search">جستجو</string>
    <string name="comment_getstar">به این محصول چه امتیازی می دهید :</string>
    <string name="comments">نظرات کاربران</string>
    <string name="detail_go_features">مشخصات</string>
    <string name="toman">تومان</string>
    <string name="commentTitle">نظرات کاربران درباره کالا</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">ورود به حساب کاربری</string>
    <string name="register">ثبت نام</string>
    <string name="receiverInfo">درج مشخصات گیرنده</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="codeMeli">کد ملی</string>
    <string name="tell">شماره تلفن ثابت</string>
    <string name="username">نام کاربری</string>
    <string name="mobile">شماره تلفن همراه </string>
    <string name="password">رمز عبور</string>
    <string name="receiver_name">نام گیرنده</string>
    <string name="receiver_family">نام خانوادگی گیرنده</string>
    <string name="receiver_mobile">شماره تلفن همراه گیرنده</string>
    <string name="receiver_address">نشانی پستی </string>

    <string name="usernameError"> نام کاربری نمی تواند خالی باشد .</string>
    <string name="phoneNumberError">شماره همراه نمی تواند خالی باشد .</string>
    <string name="validNumberError">لطفا شماره همراه معتبر وارد نمایید .</string>
    <string name="passwordError"> رمز عبور نمی تواند خالی باشد .</string>
    <string name="codeError">لطفا کد اعتباری را وارد نمایید .</string>
    <string name="validationError">کد وارد شده نامعتبر می باشد.</string>
    <string name="nullStarError">لطفا به محصول ستاره دهید.</string>
    <string name="nullCommentError">لطفا نظر خود را بنویسید .</string>
    <string name="voteBeforeError">شما قبلا به این نظر رای داده اید.</string>
    <string name="conectionError">خطا در برقراری اینترنت</string>
    <string name="loginError">برای رای دادن باید وارد حساب کاربری خود شوید .</string>
    <string name="receiverNameError">نام گیرنده را وارد نمایید .</string>
    <string name="receiverFamilyError">نام خانوادگی گیرنده را وارد نمایید .</string>
    <string name="receiverMobileError"> تلفن همراه گیرنده را وارد نمایید .</string>
    <string name="receiverAddressError"> نشانی پستی گیرنده را وارد نمایید .</string>

    <string name="registerUserInfoTag">registerUserInfo</string>
    <string name="loginUserInfoTag">loginUserInfo</string>
    <string name="rewritePhone">تصحیح شماره تلفن</string>
    <string name="sendCode">ارسال کد</string>
    <string name="validationCode">کد تایید</string>
    <string name="productIdTag">productId</string>


    <string name="writeComment">ثبت نظر</string>
    <string name="addComment">افزودن نظر</string>
    <string name="plz_write_comment">لطفا نظر خود را بنویسید .</string>
    <string name="successful_compose">نظر شما با موفقیت ثبت شد .</string>
    <string name="commented_before">شما قبلا برای این محصول نظر داده اید .</string>
    <string name="men">مردانه</string>
    <string name="women">زنانه</string>
    <string name="boys">پسرانه</string>
    <string name="girls">دخترانه</string>
    <string name="noCommentYet">هنوز برای این محصول نظری ثبت نشده است.</string>


    <string name="Hawk_selected_product">selected_product_hawk</string>
    <string name="Hawk_sabad_size">sabad_size</string>

    <string name="delete">حذف</string>
    <string name="your_basket">سبد خرید شما</string>
    <string name="number">تعداد :</string>
    <string name="brand">برند : </string>
    <string name="model">مدل :</string>
    <string name="size">سایز :</string>
    <string name="product_features">مشخصات محصول</string>
    <string name="empty_sabad_alarm">سبد خرید شما خالی است!</string>
    <string name="empty_orders_alarm">تاکنون سفارشی برای شما ثبت نشده است .</string>
    <string name="empty_favorit_alarm">لیست علاقه مندی های شما خالی است!</string>
    <string name="empty_messages_alarm">لیست پیام های شما خالی است!</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="info_form_man">مرد</string>
    <string name="info_form_woman">زن</string>
    <string name="info_form_jensiat">جنسیت :</string>

    <string name="btn_add_to_sabad">افزودن به سبد خرید </string>
    <string name="btn_send_info">ثبت اطلاعات</string>
    <string name="error_info_name">نام را وارد نمایید .</string>
    <string name="error_info_family">نام خانوادگی را وارد نمایید .</string>
    <string name="error_info_tell">شماره تلفن ثابت را وارد نمایید .</string>
    <string name="error_info_mobile">شماره تلفن همراه را وارد نمایید .</string>
    <string name="pls_complete_info">لطفا اطلاعات کاربری خود را تکمیل نمایید .</string>
    <string name="snack_update_info">اطلاعات با موفقیت به روز رسانی شد .</string>
    <string name="title_ordersList">سوابق سفارش</string>
    <string name="title_usernfo">ویرایش اطلاعات</string>
    <string name="title_messages">پیام ها</string>
    <string name="orderFormFragTag">orderFormFragmentTag</string>
    <string name="basketfragTag">BasketFragmentTag</string>
    <string name="error_network_conection">خطا در اتصال به اینترنت</string>
    <string name="error_server_conection">خطا در برقراری ارتباط با سرور</string>




</resources>
