<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textDirection="rtl"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/emptyError"
            app:hintTextAppearance="@style/myInputLayout">

            <EditText
                android:id="@+id/edt_form_name"
                style="@style/normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/receiver_name"
                android:theme="@style/EditTextTheme"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_form_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textDirection="rtl"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/emptyError"
            app:hintTextAppearance="@style/myInputLayout"
            >

            <EditText
                android:id="@+id/edt_form_family"
                style="@style/normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/receiver_family"
                android:theme="@style/EditTextTheme"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_form_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textDirection="rtl"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/emptyError"
            app:hintTextAppearance="@style/myInputLayout">

            <EditText
                android:id="@+id/edt_form_mobile"
                style="@style/normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/receiver_mobile"
                android:inputType="phone"
                android:theme="@style/EditTextTheme"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayout_form_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textDirection="rtl"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/emptyError"
            app:hintTextAppearance="@style/myInputLayout">

            <EditText
                android:id="@+id/edt_form_address"
                style="@style/normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/receiver_address"
                android:theme="@style/EditTextTheme"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txv_goToMap"
            style="@style/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="ثبت نشانی روی نقشه"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <include layout="@layout/buttom_greenbutton" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>